--- a/dog_database/package.json
+++ b/dog_database/package.json
@@ -11,6 +11,7 @@
     "html-react-parser": "^5.2.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
+    "react-burger-menu": "^3.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.79.0",
     "react-native-safe-area-context": "^5.3.0",
