--- a/dog_database/package.json
+++ b/dog_database/package.json
@@ -29,8 +29,7 @@
     "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "proxy": "http://localhost:4000"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
